# ATdataset

./: ATdataset.py  README.md  pyproject.toml  wds_datamodule_bg.py
atdataset/: __init__.py  atdataset.py  build_tars.py  feature.py
docs/: data_format.md  design.md  usage.md
examples/: example.py
src/atdataset/: __main__.py  atdataset.py  feature.py
src/cli/: build_tars.py  gen_lst.py
tests/: test_features.py
