[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atdataset"
version = "0.2.1"
description = "Audio text dataset for PyTorch training based on webdataset."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{ name = "pkufool" }]
dependencies = [
  "torch>=2.1.0",
  "torchaudio>=2.1.0",
  "webdataset>=0.2.86",
  "soundfile>=0.13",
  "numpy>=1.21",
  "tqdm>=4.60",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
test = ["pytest>=7.0"]

[project.scripts]
atdataset = "cli.build_tars:main"

[project.urls]
Repository = "https://github.com/pkufool/ATdataset"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["atdataset", "atdataset.*", "cli", "cli.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.black]
line-length = 88
